GNOME Bugzilla – Bug 647397
gnome-settings-daemon (and friends) segfault
Last modified: 2011-04-26 09:37:29 UTC
Whenever I log in g-s-d crashes, and my settings are gone. It used to work, but now suddently it doesn't. This is an account that was originally using GNOME 2.x I got this traceback: $ gdb /usr/libexec/gnome-settings-daemon core GNU gdb (Gentoo 7.2 p1) 7.2 Copyright (C) 2010 Free Software Foundation, Inc. License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html> This is free software: you are free to change and redistribute it. There is NO WARRANTY, to the extent permitted by law. Type "show copying" and "show warranty" for details. This GDB was configured as "x86_64-pc-linux-gnu". For bug reporting instructions, please see: <http://bugs.gentoo.org/>... Reading symbols from /usr/libexec/gnome-settings-daemon...done. warning: core file may not match specified executable file. [New Thread 21919] [New Thread 21924] [New Thread 21925] [New Thread 21928] [New Thread 21929] [New Thread 21927] warning: Can't read pathname for load map: Input/output error. Reading symbols from /usr/lib64/libgtk-3.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgtk-3.so.0 Reading symbols from /usr/lib64/libnotify.so.4...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libnotify.so.4 Reading symbols from /usr/lib64/libgio-2.0.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgio-2.0.so.0 Reading symbols from /usr/lib64/libgobject-2.0.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgobject-2.0.so.0 Reading symbols from /usr/lib64/libgmodule-2.0.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgmodule-2.0.so.0 Reading symbols from /usr/lib64/libgthread-2.0.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgthread-2.0.so.0 Reading symbols from /lib64/libpthread.so.0...(no debugging symbols found)...done. Loaded symbols for /lib64/libpthread.so.0 Reading symbols from /usr/lib64/libglib-2.0.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libglib-2.0.so.0 Reading symbols from /lib64/libc.so.6...(no debugging symbols found)...done. Loaded symbols for /lib64/libc.so.6 Reading symbols from /usr/lib64/libgdk-3.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgdk-3.so.0 Reading symbols from /usr/lib64/libXext.so.6...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libXext.so.6 Reading symbols from /usr/lib64/libXi.so.6...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libXi.so.6 Reading symbols from /usr/lib64/libXrandr.so.2...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libXrandr.so.2 Reading symbols from /usr/lib64/libXcursor.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libXcursor.so.1 Reading symbols from /usr/lib64/libpangocairo-1.0.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libpangocairo-1.0.so.0 Reading symbols from /usr/lib64/libXcomposite.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libXcomposite.so.1 Reading symbols from /usr/lib64/libXdamage.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libXdamage.so.1 Reading symbols from /usr/lib64/libXfixes.so.3...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libXfixes.so.3 Reading symbols from /usr/lib64/libatk-1.0.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libatk-1.0.so.0 Reading symbols from /usr/lib64/libcairo-gobject.so.2...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libcairo-gobject.so.2 Reading symbols from /usr/lib64/libcairo.so.2...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libcairo.so.2 Reading symbols from /usr/lib64/libpixman-1.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libpixman-1.so.0 Reading symbols from /usr/lib64/libEGL.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libEGL.so.1 Reading symbols from /usr/lib64/libpng14.so.14...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libpng14.so.14 Reading symbols from /usr/lib64/libXrender.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libXrender.so.1 Reading symbols from /usr/lib64/libX11.so.6...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libX11.so.6 Reading symbols from //usr/lib64/opengl/xorg-x11/lib/libGL.so.1...(no debugging symbols found)...done. Loaded symbols for //usr/lib64/opengl/xorg-x11/lib/libGL.so.1 Reading symbols from /usr/lib64/libgdk_pixbuf-2.0.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgdk_pixbuf-2.0.so.0 Reading symbols from /lib64/libresolv.so.2...(no debugging symbols found)...done. Loaded symbols for /lib64/libresolv.so.2 Reading symbols from /usr/lib64/libpangoft2-1.0.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libpangoft2-1.0.so.0 Reading symbols from /usr/lib64/libpango-1.0.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libpango-1.0.so.0 Reading symbols from /lib64/libm.so.6...(no debugging symbols found)...done. Loaded symbols for /lib64/libm.so.6 Reading symbols from /usr/lib64/libfontconfig.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libfontconfig.so.1 Reading symbols from /usr/lib64/libfreetype.so.6...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libfreetype.so.6 Reading symbols from /lib64/libz.so.1...(no debugging symbols found)...done. Loaded symbols for /lib64/libz.so.1 Reading symbols from /usr/lib64/libexpat.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libexpat.so.1 Reading symbols from /lib64/libdl.so.2...(no debugging symbols found)...done. Loaded symbols for /lib64/libdl.so.2 Reading symbols from /lib64/librt.so.1...(no debugging symbols found)...done. Loaded symbols for /lib64/librt.so.1 Reading symbols from /lib64/ld-linux-x86-64.so.2...(no debugging symbols found)...done. Loaded symbols for /lib64/ld-linux-x86-64.so.2 Reading symbols from /usr/lib64/libxcb.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libxcb.so.1 Reading symbols from /usr/lib64/libXxf86vm.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libXxf86vm.so.1 Reading symbols from /usr/lib64/libX11-xcb.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libX11-xcb.so.1 Reading symbols from /usr/lib64/libxcb-glx.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libxcb-glx.so.0 Reading symbols from /usr/lib64/libdrm.so.2...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libdrm.so.2 Reading symbols from /usr/lib64/libXau.so.6...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libXau.so.6 Reading symbols from /usr/lib64/libXdmcp.so.6...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libXdmcp.so.6 Reading symbols from /usr/lib64/gio/modules/libgioremote-volume-monitor.so...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/gio/modules/libgioremote-volume-monitor.so Reading symbols from /usr/lib64/libgvfscommon.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgvfscommon.so.0 Reading symbols from /usr/lib64/libdbus-1.so.3...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libdbus-1.so.3 Reading symbols from /lib64/libutil.so.1...(no debugging symbols found)...done. Loaded symbols for /lib64/libutil.so.1 Reading symbols from /usr/lib64/gio/modules/libdconfsettings.so...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/gio/modules/libdconfsettings.so Reading symbols from /usr/lib64/gio/modules/libgvfsdbus.so...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/gio/modules/libgvfsdbus.so Reading symbols from /lib64/libudev.so.0...(no debugging symbols found)...done. Loaded symbols for /lib64/libudev.so.0 Reading symbols from /lib64/libnss_compat.so.2...(no debugging symbols found)...done. Loaded symbols for /lib64/libnss_compat.so.2 Reading symbols from /lib64/libnsl.so.1...(no debugging symbols found)...done. Loaded symbols for /lib64/libnsl.so.1 Reading symbols from /lib64/libnss_nis.so.2...(no debugging symbols found)...done. Loaded symbols for /lib64/libnss_nis.so.2 Reading symbols from /lib64/libnss_files.so.2...(no debugging symbols found)...done. Loaded symbols for /lib64/libnss_files.so.2 Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libxrandr.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libxrandr.so Reading symbols from /usr/lib64/libgnome-desktop-3.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgnome-desktop-3.so.0 Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libxsettings.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libxsettings.so Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libsound.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libsound.so Reading symbols from /usr/lib64/libpulse.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libpulse.so.0 Reading symbols from /usr/lib64/libpulsecommon-0.9.22.so...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libpulsecommon-0.9.22.so Reading symbols from /usr/lib64/libSM.so.6...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libSM.so.6 Reading symbols from /usr/lib64/libICE.so.6...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libICE.so.6 Reading symbols from /usr/lib64/libXtst.so.6...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libXtst.so.6 Reading symbols from /usr/lib64/libxcb-atom.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libxcb-atom.so.1 Reading symbols from /usr/lib64/libsndfile.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libsndfile.so.1 Reading symbols from /usr/lib64/libFLAC.so.8...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libFLAC.so.8 Reading symbols from /usr/lib64/libvorbisenc.so.2...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libvorbisenc.so.2 Reading symbols from /usr/lib64/libvorbis.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libvorbis.so.0 Reading symbols from /usr/lib64/libogg.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libogg.so.0 Reading symbols from /usr/lib64/libgdbm.so.3...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgdbm.so.3 Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libkeyboard.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libkeyboard.so Reading symbols from /usr/lib64/libgnomekbdui.so.7...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgnomekbdui.so.7 Reading symbols from /usr/lib64/libgnomekbd.so.7...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgnomekbd.so.7 Reading symbols from /usr/lib64/libxklavier.so.16...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libxklavier.so.16 Reading symbols from /usr/lib64/libxml2.so.2...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libxml2.so.2 Reading symbols from /usr/lib64/libxkbfile.so.1...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libxkbfile.so.1 Reading symbols from /usr/lib64/libicuuc.so.46...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libicuuc.so.46 Reading symbols from /usr/lib64/libicudata.so.46...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libicudata.so.46 Reading symbols from /usr/lib/gcc/x86_64-pc-linux-gnu/4.5.2/libstdc++.so.6...(no debugging symbols found)...done. Loaded symbols for /usr/lib/gcc/x86_64-pc-linux-gnu/4.5.2/libstdc++.so.6 Reading symbols from /lib64/libgcc_s.so.1...(no debugging symbols found)...done. Loaded symbols for /lib64/libgcc_s.so.1 Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libwacom.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libwacom.so Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/liba11y-keyboard.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/liba11y-keyboard.so Reading symbols from /usr/lib64/libgconf-2.so.4...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libgconf-2.so.4 Reading symbols from /usr/lib64/libdbus-glib-1.so.2...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libdbus-glib-1.so.2 Reading symbols from /usr/lib64/libORBit-2.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libORBit-2.so.0 Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libmouse.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libmouse.so Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/liba11y-settings.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/liba11y-settings.so Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libkeybindings.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libkeybindings.so Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libmedia-keys.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libmedia-keys.so Reading symbols from /usr/lib64/libpulse-mainloop-glib.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libpulse-mainloop-glib.so.0 Reading symbols from /usr/lib64/libcanberra-gtk3.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libcanberra-gtk3.so.0 Reading symbols from /usr/lib64/libcanberra.so.0...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libcanberra.so.0 Reading symbols from /usr/lib64/libvorbisfile.so.3...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libvorbisfile.so.3 Reading symbols from /usr/lib64/libltdl.so.7...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libltdl.so.7 Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libautomount.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libautomount.so Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libbackground.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libbackground.so Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libprint-notifications.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libprint-notifications.so Reading symbols from /usr/lib64/libcups.so.2...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libcups.so.2 Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libclipboard.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libclipboard.so Reading symbols from /usr/lib64/gnome-settings-daemon-3.0/libhousekeeping.so...done. Loaded symbols for /usr/lib64/gnome-settings-daemon-3.0/libhousekeeping.so Reading symbols from /usr/lib64/gtk-3.0/3.0.0/theming-engines/libadwaita.so...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/gtk-3.0/3.0.0/theming-engines/libadwaita.so Reading symbols from /usr/lib64/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-svg.so...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-svg.so Reading symbols from /usr/lib64/librsvg-2.so.2...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/librsvg-2.so.2 Reading symbols from /usr/lib64/libcroco-0.6.so.3...(no debugging symbols found)...done. Loaded symbols for /usr/lib64/libcroco-0.6.so.3 Core was generated by `/usr/libexec/gnome-settings-daemon'. Program terminated with signal 6, Aborted.
+ Trace 226681
I noticed gsd-disk-space.c, so I will relay this information which may be related: In addition the "System Info" setting consistently shows incorrect disk "Disk" configuration. It overstates that I have 1.1 TB (I wish) on the above machine. On another machine it seems to be understating the disk. However, gnome-system-monitor does appear to me more-or-less accurate in reporting free space. It should be noted that I have linux bind-mounted directories as well as an encfs-mounted directory in $HOME, so perhaps it's choking on that (I'll try again later w/o the encfs mounted). In addition, I tried to report this bug earlier, but X just completely locked up. When I rebooted, I get the same things, but this time when I run "file core" it tells me it's from "gsettings-data-convert" which is from gconf-2.32.2. I'm not sure if you want a backtrace from that or if I should submit another bug (seems it might be related though).
Some additional info: * Disabling the encfs doesn't seem to make a difference. * My other user (test) account that never had GNOME 2.x settings doesn't seem to have the problem. * I get the following in ~/.xsession-errors: ** (gnome-settings-daemon:833489): WARNING **: Ignoring unknown module 'org.gnome.settings-daemon.plugins.gconf' * If I start g-s-d manually after logging it seems to stay up and all my settings are back.
Created attachment 186645 [details] [review] housekeeping: Fix crash when config changes
Attachment 186645 [details] pushed as b8933ce - housekeeping: Fix crash when config changes