housekeeping: Fix crash when config changes

https://bugzilla.gnome.org/show_bug.cgi?id=647397